--- a/Lifestyle Theme.html
+++ b/Lifestyle Theme.html
@@ -27,10 +27,7 @@
                     <h3>Explore trends, wellness, and living your best life</h3>
                 </hgroup>
                 <p>
-                    Lifestyle is all about finding balance, embracing health, and living
-                    in the moment. Whether you're into fitness, mindfulness, or just
-                    looking to elevate your daily routines, you've come to the right
-                    place.
+                    cooking mama
                 </p>
                 <figure>
                     <img src="https://images.unsplash.com/photo-1507919909716-c8262e491cde" alt="Wellness lifestyle image from Unsplash">
