penambahan kalkulator bni serta tema sport life

--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lifestyle Theme</title>
+    <title>Sport Life Theme</title>
     <link rel="stylesheet" href="./pico.min.css">
 </head>
+
 <body>
     <nav class="container-fluid">
         <ul>
-            <li><strong>Lifestyle Vibes</strong></li>
+            <li><strong>Sport Life</strong></li>
         </ul>
         <ul>
             <li><a href="https://irvanbelajarit.github.io/soalfrontend/index.html">Home</a></li>
             <li><a href="https://irvanbelajarit.github.io/soalfrontend/about.html">About</a></li>
+            <li><a href="kalkulatorbni.html">Calcuator</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#" role="button">Subscribe</a></li>
         </ul>
@@ -23,27 +26,31 @@
         <div class="grid">
             <section>
                 <hgroup>
-                    <h2>Welcome to the Lifestyle Hub</h2>
-                    <h3>Explore trends, wellness, and living your best life</h3>
+                    <h2>Welcome to Sport Life</h2>
+                    <h3>Explore fitness trends, wellness, and living your best athletic life</h3>
                 </hgroup>
                 <p>
-                    cooking mama
+                    Join us in our journey towards a healthier and more active lifestyle.
                 </p>
                 <figure>
-                    <img src="https://images.unsplash.com/photo-1507919909716-c8262e491cde" alt="Wellness lifestyle image from Unsplash">
-                    <figcaption>
-                        <a href="https://unsplash.com/" target="_blank">Photo from Unsplash</a>
+                    <img src="https://s1.bukalapak.com/bukalapak-kontenz-production/content_attachments/28121/original/olahraga_pagi_main_foto.jpg" alt="Wellness lifestyle image from Unsplash">
+                    <figcaption>q
+                        <a href="https://review.bukalapak.com/sports/olahraga-terbaik-pagi-hari-108454" target="_blank">Photo from bukalapak</a>
                     </figcaption>
                 </figure>
-                <h3>Latest in Wellness</h3>
+                <h3>Latest in Fitness & Wellness</h3>
                 <p>
-                    Discover the latest trends in wellness, from meditation techniques
-                    to fitness tips that keep you grounded and healthy.
+                    Discover the latest trends in fitness, from workout techniques to nutrition tips that keep you energized and healthy.
                 </p>
-                <h3>Explore Fashion & Trends</h3>
+                <figure>
+                    <img src="https://s1.bukalapak.com/bukalapak-kontenz-production/content_attachments/28121/original/olahraga_pagi_main_foto.jpg" alt="Wellness lifestyle image from Unsplash">
+                    <figcaption>
+                        <a href="https://review.bukalapak.com/sports/olahraga-terbaik-pagi-hari-108454" target="_blank">Photo from bukalapak</a>
+                    </figcaption>
+                </figure>
+                <h3>Explore Sports & Activities</h3>
                 <p>
-                    Stay ahead in fashion with insights into what's trending,
-                    sustainable fashion tips, and more.
+                    Stay ahead in sports with insights into what's trending, workout routines, and community events.
                 </p>
             </section>
         </div>
@@ -53,8 +60,8 @@
         <div class="container">
             <article>
                 <hgroup>
-                    <h2>Join Our Community</h2>
-                    <h3>Subscribe for the latest lifestyle updates</h3>
+                    <h2>Join Our Sport Community</h2>
+                    <h3>Subscribe for the latest updates in fitness and sports</h3>
                 </hgroup>
                 <form class="grid">
                     <input type="text" id="firstname" name="firstname" placeholder="First Name" aria-label="First Name" required>
@@ -71,5 +78,11 @@
         <small><a href="#">Privacy Policy</a> •
             <a href="#">Terms &amp; Conditions</a></small>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </body>
+
 </html>
