--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sport Life Theme</title>
     <link rel="stylesheet" href="./pico.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -14,7 +15,7 @@
             <li><strong>Sport Life</strong></li>
         </ul>
         <ul>
-            <li><a href="https://irvanbelajarit.github.io/soalfrontend/index.html">Home</a></li>
+            <li><a href="#">Home</a></li>
             <li><a href="https://irvanbelajarit.github.io/soalfrontend/about.html">About</a></li>
             <li><a href="kalkulatorbni.html">Calcuator</a></li>
             <li><a href="#">Contact</a></li>
@@ -43,7 +44,7 @@
                     Discover the latest trends in fitness, from workout techniques to nutrition tips that keep you energized and healthy.
                 </p>
                 <figure>
-                    <img src="https://s1.bukalapak.com/bukalapak-kontenz-production/content_attachments/28121/original/olahraga_pagi_main_foto.jpg" alt="Wellness lifestyle image from Unsplash">
+                    <img class="img-fluid" src="https://s1.bukalapak.com/bukalapak-kontenz-production/content_attachments/28121/original/olahraga_pagi_main_foto.jpg" alt="Wellness lifestyle image from Unsplash">
                     <figcaption>
                         <a href="https://review.bukalapak.com/sports/olahraga-terbaik-pagi-hari-108454" target="_blank">Photo from bukalapak</a>
                     </figcaption>
@@ -79,7 +80,6 @@
             <a href="#">Terms &amp; Conditions</a></small>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
